--- a/Flexbox/style.css
+++ b/Flexbox/style.css
@@ -22,91 +22,7 @@ h1 {
 }
 
 
-/* Specefy some elements size to make all the element in diffrent sizes */
-/* .a {
-    height: 150px;
-}
-
-.c {
-    width: 130px;
-}
-
-.f {
-    height: 100px;
-    width: 100px;
-} */
-
-/* All the necessary CSS code for Flaxbox */
-
-/*All the item become side by side*/
+/*This is the primary code to make any element flex*/
 .container {
     display: flex;
-}
-
-/*Flex direction, used for specefy the diraction of all the items "row" is by default*/
-.container {
-    /* flex-direction: row; */
-    /* flex-direction: row-reverse; */
-    /* flex-direction: column; */
-    flex-direction: column-reverse;
-}
-
-/* Flex Wrap, by defoult "no-wrap" */
-.container {
-    /* flex-wrap: wrap; */
-    /* flex-wrap: nowrap; */
-    flex-wrap: wrap-reverse;
-}
-
-/* Shortheand for Flex Direction and Wrap  */
-.container {
-    /* flex-flow: row-reverse wrap; */
-    flex-flow: row wrap;
-}
-
-/* Flex alaignment, Position of center, left, right ect. */
-.container {
-    /* justify-content: center; */
-    /* justify-content: space-around; */
-    /* justify-content: space-between; */
-    justify-content: space-evenly;
-}
-
-/* Flex alaign item*/
-.container {
-    /* align-items: stretch; */
-    /* align-items: flex-start; */
-    align-items: center;
-}
-
-/* Flexbox align content  */
-.container {
-    /* align-content: center; */
-    /* align-content: space-around; */
-    align-content: space-between;
-}
-
-/* Flexbox Order which will decide to show in which position by manualy, Bigger number means more last */
-/* .a{
-    order: 10;
-}
-
-.b{
-    order: 9;
-} */
-
-/* Flex Grow */
-/* .item{
-    flex-grow: 1;
-    flex-shrink: 0;
-} */
-
-/* Flex Basis, Better option of min-width */
-/* .a{
-    flex-basis: 100px;
-} */
-
-/* flex: flex-grow flex-shrink flex-basis */
-.item{
-    flex: 0 1 100;
 }
