--- a/Flexbox/flex-wrap/style.css
+++ b/Flexbox/flex-wrap/style.css
@@ -22,7 +22,16 @@ h1 {
 }
 
 
-/*This is the primary code to make any element flex*/
+/*"flex-wrap" is a CSS property that determines whether flex items should wrap to the next line when they don't fit in a flex container's horizontal space. It controls whether flex items should stay on a single line (the default) or wrap to the next line if there isn't enough room horizontally.*/
 .container {
     display: flex;
+    flex-wrap: nowrap;     /* Defoult */
+    flex-wrap: wrap;
+    flex-wrap: wrap-reverse;
+}
+
+
+/* flex-flow: flex-direction flex-wrap */
+.container{
+    flex-flow: row wrap;
 }
