--- a/Animation/Button/style.css
+++ b/Animation/Button/style.css
@@ -18,27 +18,34 @@
 
 @keyframes button-animation {
     0% {
-        transform: scale(1 , 1)
+        opacity: .2;
+        transform: scale(-1 , -1)
     }
-
-    80% {
-        transform: rotate(1.5, 1.5);
+    25%{
+        opacity: 0;
+        transform: scale(-0.5 , -0.5)  
+    }
+    50%{
+        opacity: 0;
+        transform: scale(0 , 0)    
+    }
+    
+    75% {
+        opacity: 0;
+        transform: rotate(0.5, 0.5);
+    }
+    100%{
         opacity: 0.5;
-    }
-
-    100% {
-        transform: scale(1, 1);
-        opacity: 0.0;
+        transform: scale(1 , 1)
     }
 }
 .animation {
     height: 60px;
-    width: 270px;
+    width: 300px;
     position: absolute;
     background-color: blue;
     opacity: 0.5;
     border-radius: 5px;
-    animation: button-animation 5s infinite;
-    /* animation-timeline: 5s; */
-    animation-fill-mode: ;
+    animation: button-animation 4s infinite;
+    animation-timing-function: linear;
 }
